<resources>
    <string name="app_name">Bitacora de presión arterial</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="seleccionar_fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="genero">Genero:</string>
    <string name="registrar_usuario">Registrar usuario</string>
    <string name="usuarios_registrados">Usuarios registrados</string>
    <string name="configuracion">Configuración</string>
    <string name="exportar_reportes">Exportar reportes</string>
    <string name="mi_perfil">Mi perfil</string>
    <string name="cambiar_usuario">Cambiar usuario</string>
    <string name="detalles_de_perfil">Detalles de perfil</string>
    <string name="editar">Editar</string>
    <string name="usuario_registrado_correctamente">Usuario registrado correctamente</string>
    <string name="usuario_seleccionado_correctamente">Usuario seleccionado correctamente</string>
    <string name="usuario_eliminado_correctamente">Usuario eliminado correctamente</string>
    <string name="anadir_toma">Añadir toma</string>
    <string name="sistolica">Sistólica:</string>
    <string name="diastolica">Diastólica:</string>
    <string name="sistolica_label">Sistólica</string>
    <string name="diastolica_label">Diastólica</string>
    <string name="pulso">Pulso:</string>
    <string name="pulso_label">Pulso</string>
    <string name="extremidad">Extremidad:</string>
    <string name="posicion">Posición:</string>
    <string name="momento_dia">Momento del día:</string>
    <string name="fecha">Fecha:</string>
    <string name="hora">Hora:</string>
    <string name="nota">Nota:</string>
    <string name="mmhg">mmHg</string>
    <string name="ppm">ppm</string>
    <string name="detalles_de_toma">Detalles de toma</string>
    <string name="valores">Valores</string>
    <string name="estado">Estado:</string>
    <string name="posicion_label">Posición</string>
    <string name="fecha_label">Fecha y hora</string>
    <string name="nota_label">Nota</string>
    <string name="ordenar_lista">Ordenar lista</string>
    <string name="opciones_de_toma">Opciones de toma</string>
    <string name="esta_seguro_eliminar_toma">¿Está seguro de eliminar esta toma?</string>
    <string name="eliminar_toma_mensajes">Eliminar el registro de esta toma es un proceso irreversible, ¿desea continuar?</string>
    <string name="eliminar">Eliminar</string>
    <string name="cancelar">Cancelar</string>
    <string name="es_necesario_especificar_nombre_apellidos">Es necesario especificar al menos nombre y apellidos para registrar un nuevo perfil.</string>
    <string name="es_necesario_especificar_sis_dia_pul">Es necesario especificar al menos la presión sistólica, diastólica y pulso.</string>
    <string name="edad_placeholder">( %1$d )</string>
    <string name="opciones_de_usuario">Opciones de usuario</string>
    <string name="eliminar_usuario_mensaje">Al eliminar un usuario todos sus registros, estadísticas, reportes y recordatorios serán eliminados también, ¿Desea continuar?</string>
    <string name="politica_de_privacidad">Política de privacidad</string>
    <string name="leer_politica_privacidad">Leer la política privacidad y términos de uso de la aplicación.</string>
    <string name="calificanos_en_ps">Califícanos en la Play Store</string>
    <string name="tu_opinion_es_importante">Tu opinión es muy importante para nosotros.</string>
    <string name="version">Versión</string>
    <string name="filtrar">Filtrar</string>
    <string name="anadir_recordatorio">Añadir recordatorio</string>
    <string name="tipo_recordatorio">Tipo de recordatorio:</string>
    <string name="hora_recordatorio">Hora del recordatorio:</string>
    <string name="dias_que_se_repite">Días que se repite:</string>
    <string name="L">L</string>
    <string name="ma">M</string>
    <string name="mi">M</string>
    <string name="ju">J</string>
    <string name="vi">V</string>
    <string name="sa">S</string>
    <string name="dom">D</string>
    <string name="mensaje_anadir_recordatorio">Es necesario elegir al menos un día de repetición para el recordatorio.</string>
    <string name="detalles_de_recordatorio">Detalles de recordatorio</string>
    <string name="hora_y_dias_repite">Hora y días que se repite</string>
    <string name="tipo_de_recordatorio">Tipo de recordatorio</string>
    <string name="esta_seguro_eliminar_recordatorio">¿Está seguro de eliminar este recordatorio?</string>
    <string name="eliminar_recordatorio_mensaje">Eliminar el recordatorio es un proceso irreversible, ¿desea continuar?</string>
    <string name="ver_detalles">Ver detalles</string>
    <string name="distribucion_de_las_valoraciones">Distribución de las valoraciones:</string>
    <string name="filtrar_tomas">Filtrar tomas:</string>
    <string name="ordenar">Ordenar:</string>
    <string name="tomas">Tomas</string>
    <string name="estadisticas">Estadisticas</string>
    <string name="recordatorios">Recordatorios</string>
    <string name="por_evaluacion">Por evaluación:</string>
    <string name="por_momento_dia">Por momento del día:</string>
    <string name="por_extremidad">Por extremidad:</string>
    <string name="por_posicion">Por posición:</string>
    <string name="reportes">Reportes</string>
    <string name="anadir_imagen_de_perfil">Añadir imagen de perfil</string>
    <string name="elegir_imagen_perfil_desde">Eleguir imagen desde:</string>
    <string name="mensaje_permisos_galeria">Es necesario permitir los permisos de lectura de medios multimedia para poder abrir la galería</string>
    <string name="reporte_creado_satisfactoriamente">Reporte creado satisfactoriamente</string>
    <string name="ocurrio_un_error_crear_reporte">Ocurrió un error al crear el reporte</string>
    <string name="reportes_creados">Reportes creados</string>
    <string name="abrir_reporte">Abrir reporte</string>
    <string name="compartir">Compartir</string>
    <string name="compartir_reporte">Compartir reporte....</string>
    <string name="compartir_reporte_intent">Compartir reporte</string>
    <string name="reporte">Reporte_</string>
    <string name="crear_nuev_reporte">Crear nuevo reporte</string>
    <string name="crear">Crear</string>
    <string name="nombre_del_reporte">Nombre del reporte:</string>
    <string name="reporte_de_presion_arterial">Reporte de presión arterial</string>
    <string name="reporte_creado">Reporte creado</string>
    <string name="fecha_nacimiento_reporte">Fecha de nacimiento:</string>
    <string name="toca_aqui_abrir_reportes">Toca aquí para abrir la lista de reportes</string>
    <string name="acerca_de">Acerca de</string>
    <array name="generos">
        <item>Masculino</item>
        <item>Femenino</item>
    </array>

    <string-array name="extremidades">
        <item>Brazo izquierdo</item>
        <item>Brazo derecho</item>
        <item>Muñeca izquierda</item>
        <item>Muñeca derecha</item>
        <item>Tobillo izquierdo</item>
        <item>Tobillo derecho</item>
        <item>Muslo izquierdo</item>
        <item>Muslo derecho</item>
    </string-array>

    <string-array name="posiciones">
        <item>Sentado</item>
        <item>Acostado</item>
        <item>Recostado</item>
        <item>De pie</item>
    </string-array>

    <string-array name="momento">
        <item>Aleatorió</item>
        <item>Después de despertar</item>
        <item>Antes de dormir</item>
        <item>Antes de medicamento</item>
        <item>Después de medicamento</item>
        <item>Antes de comer</item>
        <item>Después de comer</item>
    </string-array>

    <string-array name="presion_arterial">
        <item>Hipotensión</item>
        <item>Normal</item>
        <item>Prehipertensión</item>
        <item>Hipertensión estado 1</item>
        <item>Hipertensión estado 2</item>
        <item>Crisis hipertensiva</item>
    </string-array>

    <string-array name="opciones_toma">
        <item>Editar</item>
        <item>Eliminar</item>
    </string-array>

    <string-array name="tipos_recordatorio">
        <item>Toma de presión arterial</item>
        <item>Toma de medicamento</item>
    </string-array>

    <string-array name="filtros">
        <item>Sin filtro</item>
        <item>Por evaluación</item>
        <item>Por momento del día</item>
        <item>Por extremidad</item>
        <item>Por posición</item>
    </string-array>

    <string-array name="ordenes">
        <item>Más recientes primero</item>
        <item>Más antiguas primero</item>
    </string-array>

    <string-array name="reportes">
        <item>Generar nuevo reporte</item>
        <item>Ver reportes generados</item>
    </string-array>

    <string-array name="formato_reportes">
        <item>Crear con formato predeterminado</item>
        <item>Crear con formato con filtros actuales</item>
        <item>Ver reportes creados</item>
    </string-array>

    <string-array name="fuente_imagen">
        <item>Galería</item>
        <item>Cámara</item>
    </string-array>
    <string name="esta_seguro_eliminar_usuario">¿Esta seguro de eliminar este usuario?</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="primer_usuario_mensaje">Para poder usar la aplicación es necesario registrar al primer usuario. ¿Desea registrarlo ahora?</string>
</resources>
